namespace ApplicationCore.Domain.Enums
{
    public enum estadoReporte
    {
        Pendiente,
        Resuelto,
        Rechazado
    }
}
