namespace ApplicationCore.Domain.Enums
{
    public enum tipoLista
    {
        Vista,
        Pendiente,
        MeGusta,
        Otra
    }
}
