namespace ApplicationCore.Domain.Enums
{
    public enum tipoNotificacion
    {
        LikeResenya,
        Reporte,
        Anuncio,
        Otro
    }
}
