namespace ApplicationCore.Domain.Enums
{
    /// <summary>
    /// Estado de la notificación
    /// Leida = 1, NoLeida = 2
    /// </summary>
    public enum estadoNotificacion
    {
        Leida = 1,
        NoLeida = 2
    }
}
