@startuml

title FLICKS Domain
' ===============================================================
' === HECHO POR:
' === Qinrui Chen
' === Noelia Almeida Ibányez
' === Sebastián Ayala García
' === Sandra Moya del Amo
' ===============================================================

skinparam packageStyle rectangle
skinparam classAttributeIconSize 0
skinparam backgroundColor #FEFEFE
skinparam class {
  BackgroundColor #FFFCEB
  BorderColor #B0A060
}

skinparam enum {
  BackgroundColor #a9ff93ff
  BorderColor #000000
}

' Los id Long de las clases  son Autogenerated en OOH4RIA 

package "FLICKS" {
  ' ========================================
  ' ENUMS
  ' ========================================
  enum tipoNotificacion {
    likeResenya : 1
    reporte : 2
    anuncio : 3
    otro : 4
  }

  enum tipoLista {
    vista : 1
    pendiente : 2
    meGusta : 3
    otra : 4
  }

  enum estadoReporte {
    pendiente : 1
    resuelto : 2
    rechazado : 3
  }

  enum estadoNotificacion {
    leido : 1
    noleido : 2
  }

  ' ========================================
  ' CLASES
  ' ========================================

  class Usuario {
    - id : Long
    - nombre : String
    - email : String
    - fotoPerfil : String
    - biografia : String
    - modoBlancoYNegro : Boolean
    - pass : Password
    + new()
    + modify()
    + destroy()
    + readAll()
    + readID()
    + crearResenyaActualizarVM()
    + modoBlancoYN()
    + login()
  }

  class Administrador {
    - id : Long
    - nombre : String
    - email : String
    - pass : Password
    + new()
    + modify()
    + login()
    + destroy()
    + readAll()
    + readID()
    + resolverReporteEnviarNotificacion()
  }

  class Pelicula {
    - id : Long
    - titulo : String
    - tituloOriginal : String
    - anyo : Long
    - duracion : Long
    - pais : String
    - director : String
    - sinopsis : String
    - valoracionMedia : Decimal
    + new()
    + modify()
    + destroy()
    + readAll()
    + readID()
    + readFilterGenero()
    + readFilterValoracion()
    + readFilterAnyo()
    + readFilterTitulo()
    + contarResenyas()
    + calcularValoracionMedia()
  }

  class Resenya {
    - id : Long
    - punctuation : Long
    - comentario : String
    - fecha : DateTime
    + new()
    + modify()
    + destroy()
    + readAll()
    + readID()
    + readFilterUsuario()
    + readFilterValoracion()
    + readFilterByPelicula()
  }

  class Lista {
    - id : Long
    - nombre : String
    - tipo : tipoLista
    + new()
    + modify()
    + destroy()
    + readAll()
    + readID()
    + anyadirPelicula()
  }

  class Reporte {
    - id : Long
    - motivo : String
    - estado : String
    - fecha : String
    + new()
    + modify()
    + destroy()
    + readAll()
    + readID()
    + readFilterEstado()
  }

  class Notificacion {
    - id : Long
    - mensaje : String
    - fecha : Date
    - tipoNotificacion : tipoNotificacion
    - idOrigen : Long
    - estadoNotificacion : estadoNotificacion
    + new()
    + destroy()
    + readAll()
    + readID()
    + readFilterEstado()
    + readFilterOrigen()
    + cambiarEstado()
  }

  class Metrica {
    - id : Long
    - estadisticas : String
    - fecha : Date
    + readAll()
    + readID()
    + new()
    + modify()
    + destroy()
  }

  ' ========================================
  ' RELACIONES
  ' ========================================

  Usuario "1..1" -- "0..*" Resenya : crea >
  Usuario "1..*" -- "0..*" Lista : lista >
  Usuario "1..1" -- "0..*" Reporte : envia >
  Usuario "1..1" -- "0..*" Notificacion : notificacion >
  Usuario "1..*" -- "0..1" Metrica : metrica >
  Administrador "1..1" -- "0..*" Pelicula : publica >
  Administrador "1..1" -- "0..*" Reporte : resuelve >
  Lista "0..*" -- "1..*" Pelicula : pelicula >
  Reporte "0..1" -- "1..*" Resenya : resenya >
  Pelicula "1..1" -- "0..*" Resenya : resenyas >
}
@enduml
